--- a/src/app/admin/commande/detail/detail.component.html
+++ b/src/app/admin/commande/detail/detail.component.html
@@ -69,8 +69,8 @@
                                     <div class="col-sm-10">
                                     <select name="status"  (change)="changestatus($event)" class="form-control">
                                         <option  disabled selected  value="{{ commande.status }}">{{ commande.status }}</option>
-                                        <option  value="refuser">denied</option>
-                                        <option value="confimer">approved  </option>
+                                        <option  value="denied">denied</option>
+                                        <option value="approved">approved  </option>
                                     </select>
                                     </div>
                                 </div>
