--- a/src/app/admin/offer/editoffer/editoffer.component.html
+++ b/src/app/admin/offer/editoffer/editoffer.component.html
@@ -18,7 +18,7 @@
         </div>
         <div class="form-group">
             <label for="description">description</label>
-            <textarea rows="5" cols="10" #description="ngModel" [(ngModel)]="form.description"   type="text"
+            <textarea  car rows="5" cols="10" #description="ngModel" [(ngModel)]="form.description"   type="text"
                 class="form-control"></textarea>
     
         </div>
