--- a/src/app/admin/commande/commande.component.html
+++ b/src/app/admin/commande/commande.component.html
@@ -11,13 +11,13 @@
             <div class="col-lg-12">
                 <div class="section-title text-center">
                     <div class="title-text">
-                        <h2>List of Commandes</h2>
+                        <h2>List of orders</h2>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- row end-->
-        <div class="row">
+        
+        <div class="row" >
             <div class="col-lg-12">
                 <div class="tab-content" id="myTabContent">
                     <div class="tab-pane fade active show" id="home" role="tabpanel">
