--- a/src/app/admin/user/user.component.html
+++ b/src/app/admin/user/user.component.html
@@ -43,7 +43,7 @@
                         <span class="nav-link-inner--text d-lg-none"></span>
                       </a>
                     <div class="dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1" ngbDropdownMenu>
-                      <a class="dropdown-item" href="javascript:void(0)">delete</a>
+                      <a class="dropdown-item" (click)="Delete(user.username)">delete</a>
                       <a class="dropdown-item" (click)="update(user.username)">update</a>
                     
                     </div>
