--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -4,16 +4,18 @@
     <section class="section section-lg section-shaped ">
       <ngb-carousel>
         <ng-template ngbSlide>
-          <img class="d-block w-100" src="assets/img/theme/test.jpg" alt="First slide"style="height: 850px; width: auto;">
+          <img class="d-block w-100" src="assets/img/theme/test.jpg" alt="First slide"
+            style="height: 850px; width: auto;">
         </ng-template>
         <ng-template ngbSlide>
-          <img class="d-block w-100" src="assets/img/theme/img-2-1200x1000.jpg" alt="Second slide" style="height: 850px; width: auto;">
+          <img class="d-block w-100" src="assets/img/theme/img-2-1200x1000.jpg" alt="Second slide"
+            style="height: 850px; width: auto;">
         </ng-template>
-    </ngb-carousel>
+      </ngb-carousel>
       <div class="shape shape-style-1 ">
-     
+
       </div>
-     <!-- <div class="container py-lg-md d-flex">
+      <!-- <div class="container py-lg-md d-flex">
         <div class="col px-0">
           <div class="row">
             <div class="col-lg-6">
@@ -36,11 +38,11 @@
         </div>
       </div> 
       SVG separator-->
-     
+
     </section>
     <!-- 1st Hero Variation -->
   </div>
-  <section >
+  <section>
     <!-- <div class="shape shape-style-1 shape-default">
        <span></span>
       <span></span>
@@ -55,16 +57,18 @@
       <div class="row row-grid justify-content-between align-items-center">
         <div class="col-lg-6">
           <h2>About Us</h2>
-            <span class="text-white">completed with examples</span>
-        
-            <p>Drobee is a Tunisian technology start-up. Starting with intelligent drones, we bring smart technology solutions to the agriculture industry. Our goal is to boost yields by using AI, drone technology, and robotics to automate farming chores.</p>
+          <span class="text-white">completed with examples</span>
+
+          <p>Drobee is a Tunisian technology start-up. Starting with intelligent drones, we bring smart technology
+            solutions to the agriculture industry. Our goal is to boost yields by using AI, drone technology, and
+            robotics to automate farming chores.</p>
           <div class="btn-wrapper">
             <a [routerLink]="['/login']" class="btn btn-success">Login Page</a>
             <a [routerLink]="['/register']" class="btn btn-white">Register Page</a>
           </div>
         </div>
         <div class="col-lg-5 mb-lg-auto">
-          <img src="../../assets/img/theme/landingaboutus.jpg" class="img-fluid floating" style="height: 100%; width: 100%;" >
+          <img src="assets/img/theme/landingaboutus.jpg" class="img-fluid floating" style="height: 100%; width: 100%;">
         </div>
       </div>
     </div>
@@ -75,15 +79,15 @@
       </svg>
     </div> -->
   </section>
- 
+
   <section class="section bg-secondary">
     <div class="row justify-content-center text-center mb-lg">
       <div class="col-lg-8">
         <h2 class="display-3">Services</h2>
       </div>
     </div>
-    <div class="container" *ngFor="let offer of offers" >
-      <br><br>
+    <div class="container" *ngFor="let offer of offers">
+      
       <div class="row row-grid align-items-center">
         <div class="col-md-6">
           <div class="card bg-default shadow border-0">
@@ -100,14 +104,9 @@
         </div>
         <div class="col-md-6">
           <div class="pl-md-5">
-            <div class="icon icon-lg icon-shape icon-shape-warning shadow rounded-circle mb-5">
-              <i class="ni ni-settings"></i>
-            </div>
             <h3>{{offer.name}}</h3>
             <p class="lead">{{offer.description}}</p>
-           <!-- <p>The kit comes with three pre-built pages to help you get started faster. You can change the text and images and youre good to go.</p>
-            <p>The kit comes with three pre-built pages to help you get started faster. You can change the text and images and you're good to go.</p> -->
-            <a href="javascript:void(0)" class="font-weight-bold text-warning mt-5"></a>
+            <a [routerLink]="['/user/commande/add']" class="btn btn-white">place an order</a>
           </div>
         </div>
       </div>
@@ -115,68 +114,7 @@
       </section>
     </div>
   </section>
-  <section class="section pb-0 bg-gradient-warning">
-    <div class="container">
-      <div class="row row-grid align-items-center">
-        <div class="col-md-6 order-lg-2 ml-lg-auto">
-          <div class="position-relative pl-md-5">
-            <img src="./assets/img/ill/ill-2.svg" class="img-center img-fluid">
-          </div>
-        </div>
-        <div class="col-lg-6 order-lg-1">
-          <div class="d-flex px-3">
-            <div>
-              <div class="icon icon-lg icon-shape bg-gradient-white shadow rounded-circle text-primary">
-                <i class="ni ni-building text-primary"></i>
-              </div>
-            </div>
-            <div class="pl-4">
-              <h4 class="display-3 text-white">Modern Interface</h4>
-              <p class="text-white">The Arctic Ocean freezes every winter and much of the sea-ice then thaws every summer, and that process will continue whatever.</p>
-            </div>
-          </div>
-          <div class="card shadow shadow-lg--hover mt-5">
-            <div class="card-body">
-              <div class="d-flex px-3">
-                <div>
-                  <div class="icon icon-shape bg-gradient-success rounded-circle text-white">
-                    <i class="ni ni-satisfied"></i>
-                  </div>
-                </div>
-                <div class="pl-4">
-                  <h5 class="title text-success">Awesome Support</h5>
-                  <p>The Arctic Ocean freezes every winter and much of the sea-ice then thaws every summer, and that process will continue whatever.</p>
-                  <a href="javascript:void(0)" class="text-success">Learn more</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="card shadow shadow-lg--hover mt-5">
-            <div class="card-body">
-              <div class="d-flex px-3">
-                <div>
-                  <div class="icon icon-shape bg-gradient-warning rounded-circle text-white">
-                    <i class="ni ni-active-40"></i>
-                  </div>
-                </div>
-                <div class="pl-4">
-                  <h5 class="title text-warning">Modular Components</h5>
-                  <p>The Arctic Ocean freezes every winter and much of the sea-ice then thaws every summer, and that process will continue whatever.</p>
-                  <a href="javascript:void(0)" class="text-warning">Learn more</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- SVG separator -->
-    <div class="separator separator-bottom separator-skew zindex-100">
-      <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
-        <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
-      </svg>
-    </div>
-  </section>
+
   <section class="section section-lg">
     <div class="container">
       <div class="row justify-content-center text-center mb-lg">
@@ -188,7 +126,8 @@
       <div class="row">
         <div class="col-md-6 col-lg-3 mb-5 mb-lg-0" *ngFor="let user of users ">
           <div class="px-4">
-            <img src="{{user.image.url}} " class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="height: 150px; width: 150px;">
+            <img src="{{user.image.url}} " class="rounded-circle img-center img-fluid shadow shadow-lg--hover"
+              style="height: 150px; width: 150px;">
             <div class="pt-4 text-center">
               <h5 class="title">
                 <span class="d-block mb-1">{{user.firstname}} <br> {{user.lastname}}</span>
@@ -384,33 +323,46 @@
             <!-- <h4 class="display-4 mb-5 mt-5">Available on these technologies</h4> -->
             <div class="row justify-content-center">
               <div class="col-lg-2 col-4">
-                <a href="https://www.creative-tim.com/product/argon-design-system?ref=adsa-landing-page" target="_blank" placement="top" ngbTooltip="Bootstrap 4 - Most popular front-end component library">
-                  <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/bootstrap.jpg" class="img-fluid">
+                <a href="https://www.creative-tim.com/product/argon-design-system?ref=adsa-landing-page" target="_blank"
+                  placement="top" ngbTooltip="Bootstrap 4 - Most popular front-end component library">
+                  <img
+                    src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/bootstrap.jpg"
+                    class="img-fluid">
                 </a>
               </div>
               <div class="col-lg-2 col-4">
-                <a href="https://www.creative-tim.com/product/argon-design-system-angular?ref=adsa-landing-page" target="_blank" placement="top" ngbTooltip="Angular - One framework. Mobile &amp; desktop">
-                  <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/angular.jpg" class="img-fluid">
+                <a href="https://www.creative-tim.com/product/argon-design-system-angular?ref=adsa-landing-page"
+                  target="_blank" placement="top" ngbTooltip="Angular - One framework. Mobile &amp; desktop">
+                  <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/angular.jpg"
+                    class="img-fluid">
                 </a>
               </div>
               <div class="col-lg-2 col-4">
-                <a href="https://www.creative-tim.com/product/vue-argon-design-system?ref=adsa-landing-page" target="_blank" placement="top" ngbTooltip="Vue.js - The progressive javascript framework">
-                  <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/vue.jpg" class="img-fluid">
+                <a href="https://www.creative-tim.com/product/vue-argon-design-system?ref=adsa-landing-page"
+                  target="_blank" placement="top" ngbTooltip="Vue.js - The progressive javascript framework">
+                  <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/vue.jpg"
+                    class="img-fluid">
                 </a>
               </div>
               <div class="col-lg-2 col-4">
-                <a href="https://www.sketchapp.com/?ref=creative-tim" target="_blank" placement="top" ngbTooltip="[Coming Soon] Sketch - Digital design toolkit">
-                  <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/sketch.jpg" class="img-fluid opacity-3">
+                <a href="https://www.sketchapp.com/?ref=creative-tim" target="_blank" placement="top"
+                  ngbTooltip="[Coming Soon] Sketch - Digital design toolkit">
+                  <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/sketch.jpg"
+                    class="img-fluid opacity-3">
                 </a>
               </div>
               <div class="col-lg-2 col-4">
-                <a href="https://www.adobe.com/products/photoshop.html?ref=creative-tim" target="_blank" placement="top" ngbTooltip="[Coming Soon] Adobe Photoshop - Software for digital images manipulation">
-                  <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/ps.jpg" class="img-fluid opacity-3">
+                <a href="https://www.adobe.com/products/photoshop.html?ref=creative-tim" target="_blank" placement="top"
+                  ngbTooltip="[Coming Soon] Adobe Photoshop - Software for digital images manipulation">
+                  <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/ps.jpg"
+                    class="img-fluid opacity-3">
                 </a>
               </div>
               <div class="col-lg-2 col-4">
-                <a href="https://reactjs.org/?ref=creative-tim" target="_blank" placement="top" ngbTooltip="[Coming Soon] React - A JavaScript library for building user interfaces">
-                  <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/react.jpg" class="img-fluid opacity-3">
+                <a href="https://reactjs.org/?ref=creative-tim" target="_blank" placement="top"
+                  ngbTooltip="[Coming Soon] React - A JavaScript library for building user interfaces">
+                  <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/react.jpg"
+                    class="img-fluid opacity-3">
                 </a>
               </div>
             </div>
