--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -116,7 +116,7 @@
               </div>
               <div class="form-group">
                 <div class="alert alert-danger" role="alert" *ngIf="f.submitted && isLoginFailed">
-                  Login failed: {{ errorMessage }}
+                  Connection failure: false credentials
                 </div>
               </div>
             </form>
