--- a/src/app/admin/commande/detail/detail.component.html
+++ b/src/app/admin/commande/detail/detail.component.html
@@ -19,10 +19,10 @@
                     <div class="panel-title text-center">Service detail</div>
                 </div>
                 <div class="panel-body text-center">
-                    <div class="pv-lg"><img class="center-block img-responsive img-circle img-thumbnail thumb96" src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="Contact"></div>
-                    <h3 class="m0 text-bold"> "{{ commande.offername }}"</h3>
+                    <div class="pv-lg"><img class="center-block img-responsive img-circle img-thumbnail thumb96" src="{{offer.image.url}}" alt="Contact"></div>
+                    <h3 class="m0 text-bold"> {{ offer.name }}</h3>
                     <div class="mv-lg">
-                        <p>Hello, I'm a just a dummy contact in your contact list and this is my presentation text. Have fun!</p>
+                        <p> price par unit : {{ offer.prixunit }}</p>
                     </div>
                 </div>
             </div>
