--- a/src/app/admin/offer/offer.component.html
+++ b/src/app/admin/offer/offer.component.html
@@ -1,9 +1,16 @@
-<br>
-<br>
-    <button class="btn btn-1 btn-info" type="button" placement="top" ngbTooltip="add a new service"
-    (click)="addservice()">ADD</button>
+
+    
 <div class="event-schedule-area-two bg-color pad100">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <div class="container">
+        <div>
+            <button class="btn btn-1 btn-info" type="button" placement="top" ngbTooltip="add a new service"
+            (click)="addservice()">ADD</button>
+        </div>
         <div class="row">
             <div class="col-lg-12">
                 <div class="section-title text-center">
