--- a/src/app/admin/commande/commande.component.html
+++ b/src/app/admin/commande/commande.component.html
@@ -16,8 +16,8 @@
                 </div>
             </div>
         </div>
-        
-        <div class="row" >
+
+        <div class="row">
             <div class="col-lg-12">
                 <div class="tab-content" id="myTabContent">
                     <div class="tab-pane fade active show" id="home" role="tabpanel">
@@ -31,12 +31,14 @@
                                         <th scope="col">region</th>
                                         <th scope="col">nbrunit</th>
                                         <th scope="col">date</th>
+                                           <th scope="col">order date</th>
                                         <th scope="col">status</th>
                                         <th scope="col">Action</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr class="inner-box" *ngFor="let commande of commandes ; index as i">
+                                    <tr class="inner-box" *ngFor="let commande of commandes | paginate:{itemsPerPage: tableSize,
+                                        currentPage: page, totalItems:count }; let i = index">
                                         <th scope="row">
                                             <div class="event-date">
                                                 <span>{{i+1}}</span>
@@ -75,6 +77,11 @@
                                         </td>
                                         <td>
                                             <div class="r-no">
+                                                <span>{{ commande.date| date: 'dd/MM/yyyy'}}</span>
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <div class="r-no">
                                                 <span>{{ commande.datec| date: 'dd/MM/yyyy'}}</span>
                                             </div>
                                         </td>
@@ -104,14 +111,15 @@
                                             </div>
                                         </td>
                                     </tr>
-
                                 </tbody>
                             </table>
+                            <br><br>
+                            <pagination-controls class="d-flex justify-content-center" previousLabel="Prev"
+                                nextLabel="Next" (pageChange)="onTableDataChange($event)">
+                            </pagination-controls>
                         </div>
                     </div>
-
                 </div>
-
             </div>
         </div>
     </div>
