--- a/src/app/admin/offer/offer.component.html
+++ b/src/app/admin/offer/offer.component.html
@@ -1,5 +1,3 @@
-
-    
 <div class="event-schedule-area-two bg-color pad100">
     <br>
     <br>
@@ -9,7 +7,7 @@
     <div class="container">
         <div>
             <button class="btn btn-1 btn-info" type="button" placement="top" ngbTooltip="add a new service"
-            (click)="addservice()">ADD</button>
+                (click)="addservice()">ADD</button>
         </div>
         <div class="row">
             <div class="col-lg-12">
@@ -38,7 +36,8 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr class="inner-box" *ngFor="let offer of offers ; index as i">
+                                    <tr class="inner-box" *ngFor="let offer of offers | paginate:{itemsPerPage: tableSize,
+                                        currentPage: page, totalItems:count }; let i = index">
                                         <th scope="row">
                                             <div class="event-date">
                                                 <span>{{i+1}}</span>
@@ -65,9 +64,7 @@
                                             </div>
                                         </td>
                                         <td>
-                                            <!-- <div class="primary-btn">
-                                                <a class="btn btn-primary" href="#">Read More</a>
-                                            </div> -->
+                
                                             <li class="nav-item" ngbDropdown placement="bottom-right">
                                                 <a class="nav-link nav-link-icon no-caret"
                                                     id="navbar-default_dropdown_1" ngbDropdownToggle>
@@ -78,7 +75,6 @@
                                                     aria-labelledby="navbar-default_dropdown_1" ngbDropdownMenu>
                                                     <a class="dropdown-item" (click)="delete(offer.id)">delete</a>
                                                     <a class="dropdown-item" (click)="update(offer.id)">update</a>
-
                                                 </div>
                                             </li>
                                         </td>
@@ -86,6 +82,10 @@
 
                                 </tbody>
                             </table>
+                            <br><br>
+                            <pagination-controls class="d-flex justify-content-center" previousLabel="Prev"
+                                nextLabel="Next" (pageChange)="onTableDataChange($event)">
+                            </pagination-controls>
                         </div>
                     </div>
 
