--- a/src/app/admin/user/edituser/edituser.component.html
+++ b/src/app/admin/user/edituser/edituser.component.html
@@ -2,7 +2,8 @@
     <header class="jumbotron">
 
     </header>
-    <h1>update user</h1>
+    <div class="d-flex justify-content-center"> <h1 >update user</h1></div>
+   
     <div class="container">
         <div class="row gutters">
             <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12">
