--- a/src/app/admin/user/user.component.html
+++ b/src/app/admin/user/user.component.html
@@ -1,57 +1,63 @@
-
 <div class="container">
-    <header class="jumbotron">
-      
-    </header>
-    <div>
-       <!--<button class="btn btn-1 btn-info" type="button"  placement="top"    ngbTooltip="add new user" (click)="adduser()">ADD</button> -->  
-        <br>
-        <br>
-      <div class="table-responsive-md">
-        <table class="table table-hover">
-          <thead>
-            <tr>
-              <th scope="col">#    </th>
-              <th scope="col">image  </th>
-              <th scope="col">username</th>
-              <th scope="col">firstname</th>
-              <th scope="col">lastname</th>
-              <th scope="col">phone</th>
-              <th scope="col">address</th>
-              <th scope="col">Email</th>
-              <th scope="col">Role</th>
-              <th scope="col">Action</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let user of Users ; index as i">
-              <td> {{ i+1}}</td>
-              <td>  <img src="{{user.image.url}}" class="img-fluid rounded shadow" ></td>
-              <!-- <td> {{ commande.id }}</td>-->
-              <td>{{ user.username }}</td>
-              <td>{{ user.firstname }}</td>
-              <td>{{ user.lastname }}</td>
-              <td>{{ user.phone }}</td>
-              <td>{{ user.address}}</td>
-              <td>{{ user.email }}</td>
-              <td *ngFor="let role of user.roles">{{ role.name }}</td>
-              <td>
-  
-                <li class="nav-item" ngbDropdown placement="bottom-right">
-                    <a class="nav-link nav-link-icon no-caret" id="navbar-default_dropdown_1" ngbDropdownToggle>
-                        <i class="ni ni-settings-gear-65"></i>
-                        <span class="nav-link-inner--text d-lg-none"></span>
-                      </a>
-                    <div class="dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1" ngbDropdownMenu>
-                      <a class="dropdown-item" (click)="Delete(user.username)">delete</a>
-                      <a class="dropdown-item" (click)="update(user.username)">update</a>
-                    
-                    </div>
-                  </li>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+  <header class="jumbotron">
+
+  </header>
+  <div>
+    <!--<button class="btn btn-1 btn-info" type="button"  placement="top"    ngbTooltip="add new user" (click)="adduser()">ADD</button> -->
+    <br>
+    <br>
+    <div class="table-responsive-md">
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th scope="col"># </th>
+            <th scope="col">image </th>
+            <th scope="col">username</th>
+            <th scope="col">firstname</th>
+            <th scope="col">lastname</th>
+            <th scope="col">phone</th>
+            <th scope="col">address</th>
+            <th scope="col">Email</th>
+            <th scope="col">Role</th>
+            <th scope="col">Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let user of Users  | paginate:{itemsPerPage: tableSize,
+               currentPage: page, totalItems:count }; let i = index">
+            <td> {{ i+1}}</td>
+            <td> <img src="{{user.image.url}}" class="img-fluid rounded shadow"></td>
+            <!-- <td> {{ commande.id }}</td>-->
+            <td>{{ user.username }}</td>
+            <td>{{ user.firstname }}</td>
+            <td>{{ user.lastname }}</td>
+            <td>{{ user.phone }}</td>
+            <td>{{ user.address}}</td>
+            <td>{{ user.email }}</td>
+            <td *ngFor="let role of user.roles">{{ role.name }}</td>
+            <td>
+
+              <li class="nav-item" ngbDropdown placement="bottom-right">
+                <a class="nav-link nav-link-icon no-caret" id="navbar-default_dropdown_1" ngbDropdownToggle>
+                  <i class="ni ni-settings-gear-65"></i>
+                  <span class="nav-link-inner--text d-lg-none"></span>
+                </a>
+                <div class="dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1" ngbDropdownMenu>
+                  <a class="dropdown-item" (click)="Delete(user.username)">delete</a>
+                  <a class="dropdown-item" (click)="update(user.username)">update</a>
+
+                </div>
+              </li>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <br><br>
+      <pagination-controls class="d-flex justify-content-center"
+      previousLabel="Prev" 
+      nextLabel="Next" 
+      (pageChange)="onTableDataChange($event)">
+      </pagination-controls>
     </div>
   </div>
+</div>
