--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -32,7 +32,7 @@
             <span class="nav-link-inner--text">Home</span>
           </a>
         </li>
-       <!--<li class="nav-item dropdown">
+        <!--<li class="nav-item dropdown">
           <a class="nav-link no-caret" data-toggle="dropdown" role="button" [routerLink]="['Career']">
             <i class="ni ni-ui-04 d-lg-none"></i>
             <span class="nav-link-inner--text">Career</span>
@@ -89,92 +89,65 @@
             <span class="nav-link-inner--text">commandes</span>
           </a>
         </li>
-        <!--<li class="nav-item dropdown" *ngIf="showClientBoard">
-          <a class="nav-link no-caret" data-toggle="dropdown" role="button" [routerLink]="['client/oasis']">
-            <i class="ni ni-ui-04 d-lg-none"></i>
-            <span class="nav-link-inner--text">oasis</span>
-          </a>
-        </li>-->
-
         <li class="nav-item dropdown" *ngIf="showClientBoard">
           <a class="nav-link no-caret" data-toggle="dropdown" role="button" [routerLink]="['reclamation']">
             <i class="ni ni-ui-04 d-lg-none"></i>
             <span class="nav-link-inner--text">reclamations</span>
           </a>
         </li>
-        <li class="nav-item dropdown" *ngIf="isLoggedIn">
-          <a class="nav-link no-caret" data-toggle="dropdown" role="button" [routerLink]="['user-profile']">
-            <i class="ni ni-ui-04 d-lg-none"></i>
-            <span class="nav-link-inner--text">{{username}}</span>
-
-          </a>
-        </li>
         <li class="nav-item" ngbDropdown placement="bottom-right" *ngIf="isLoggedIn">
           <div class="notification-container">
-          <button class="notification-button" (click)="toggleNotifications()" ngbDropdownToggle>
-            <i class="ni ni-bell-55 ni-x2"></i>
-            <span class="notification-badge">{{notificationcount}}</span>
-          </button>
-          <div class="dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1" ngbDropdownMenu [hidden]="!showNotifications">
-            <li *ngFor="let message of messages" class="dropdown-item">{{ message }}</li>
-            <div *ngIf="!messages.length" class="dropdown-item">No notifications</div>
+            <button class="notification-button" (click)="toggleNotifications()" ngbDropdownToggle>
+              <i class="ni ni-bell-55 "></i>
+              <span class="notification-badge">{{notificationcount}}</span>
+            </button>
+            <div class="dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1" ngbDropdownMenu
+              [hidden]="!showNotifications">
+               <li *ngFor="let message of messages" class="dropdown-item">{{ message }}</li>
+               <div *ngIf="!messages.length" class="dropdown-item">No notifications</div>
+            </div>
           </div>
-        </div>
         </li>
-        
-        <li class="nav-item dropdown" *ngIf="isLoggedIn">
-          <a class="nav-link no-caret" data-toggle="dropdown" role="button">
-            <i class="ni ni-ui-04 d-lg-none"></i>
-            <span class="nav-link-inner--text" (click)="logout()">logout</span>
+        <li class="nav-item" ngbDropdown placement="bottom-right" *ngIf="isLoggedIn">
+          <a class="nav-link nav-link-icon no-caret" id="navbar-default_dropdown_1" (click)="toggleProfileDropdown()" ngbDropdownToggle>
+          
+            <span class="nav-link-inner--text"><i class="ni ni-single-02"></i>{{" "+username}}</span>
+          </a>
+          <div class="dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1" ngbDropdownMenu
+          [hidden]="!isProfileDropdownOpen" >
+            <a class="dropdown-item" [routerLink]="['user-profile']"><i class="ni ni-single-02"></i> Profile</a>
+            <a class="dropdown-item" (click)="logout()"><i class="ni ni-user-run"></i> Logout</a>
+      
+          </div>
+        </li>
 
-          </a>
-        </li>
-      </ul>
-      <!-- <ul class="navbar-nav align-items-lg-center ml-lg-auto">
-        <li class="nav-item">
-          <a class="nav-link nav-link-icon" href="https://www.facebook.com/creativetim" target="_blank"
-            data-toggle="tooltip" title="Like us on Facebook">
-            <i class="fa fa-facebook-square"></i>
-            <span class="nav-link-inner--text d-lg-none">Facebook</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link nav-link-icon" href="https://www.instagram.com/creativetimofficial" target="_blank"
-            data-toggle="tooltip" title="Follow us on Instagram">
-            <i class="fa fa-instagram"></i>
-            <span class="nav-link-inner--text d-lg-none">Instagram</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link nav-link-icon" href="https://twitter.com/creativetim" target="_blank" data-toggle="tooltip"
-            title="Follow us on Twitter">
-            <i class="fa fa-twitter-square"></i>
-            <span class="nav-link-inner--text d-lg-none">Twitter</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link nav-link-icon"
-            href="https://github.com/creativetimofficial/argon-design-system-angular?ref=adsa-navbar" target="_blank"
-            data-toggle="tooltip" title="Star us on Github">
-            <i class="fa fa-github"></i>
-            <span class="nav-link-inner--text d-lg-none">Github</span>
-          </a>
-        </li>
-        <li class="nav-item d-none d-lg-block ml-lg-4">
-          <a class="nav-link no-caret" data-toggle="dropdown" role="button" [routerLink]="['user-profile']">
-            <i class="ni ni-ui-04 d-lg-none"></i>
-            <span class="nav-link-inner--text">{{username}}</span>
-          
-          </a>
-        </li>
-        <li class="nav-item d-none d-lg-block ml-lg-4">
-          <a class="nav-link no-caret" data-toggle="dropdown" role="button" >
-            <i class="ni ni-ui-04 d-lg-none"></i>
-            <span class="nav-link-inner--text" (click)="logout()">logout</span>
-          
-          </a>
-        </li> 
-      </ul> -->
-    </div>
+
+
+
+  </ul>
+  <ul class="navbar-nav align-items-lg-center ml-lg-auto">
+    <li class="nav-item">
+      <a class="nav-link nav-link-icon" href="https://www.facebook.com/profile.php?id=100065217333130&locale=fr_FR" target="_blank"
+        data-toggle="tooltip" title="Like us on Facebook">
+        <i class="fa fa-facebook-square"></i>
+        <span class="nav-link-inner--text d-lg-none">Facebook</span>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link nav-link-icon" href="" target="_blank"
+        data-toggle="tooltip" title="Follow us on Instagram">
+        <i class="fa fa-instagram"></i>
+        <span class="nav-link-inner--text d-lg-none">Instagram</span>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link nav-link-icon" href="" target="_blank" data-toggle="tooltip"
+        title="Follow us on Twitter">
+        <i class="fa fa-twitter-square"></i>
+        <span class="nav-link-inner--text d-lg-none">Twitter</span>
+      </a>
+    </li>
+  </ul>
+  </div>
   </div>
 </nav>
