--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -5,7 +5,7 @@
   <br>
   <section class="section section-lg section-shaped pb-250">
     <div class="shape shape-style-1 shape-default">
-      <img src="../../assets/img/theme/test.jpg" class="img-fluid " style="height: 100%; width: 100%;">
+      <img src="./assets/img/theme/test.jpg" class="img-fluid " style="height: 100%; width: 100%;">
     </div>
     <div class="container py-lg-md d-flex">
       <div class="col px-0">
@@ -121,14 +121,14 @@
                 <a href=""
                   target="_blank" placement="top"
                   ngbTooltip="Sarab Advanced Systems">
-                  <img src="../../assets/img/ill/SARAB.jpg " class="img-fluid">
+                  <img src="./assets/img/ill/SARAB.jpg " class="img-fluid">
                 </a>
               </div>
               <div class="col-lg-2 col-4">
                 <a href=""
                   target="_blank" placement="top" ngbTooltip="Aquatech">
                   <img
-                    src="../../assets/img/ill/aquatech.png "
+                    src="./assets/img/ill/aquatech.png "
                     class="img-fluid">
                 </a>
               </div>
@@ -136,7 +136,7 @@
                 <a href=""
                   target="_blank" placement="top" ngbTooltip="L'APIA">
                   <img
-                  src="../../assets/img/ill/aipa.png"
+                  src="./assets/img/ill/aipa.png"
                     class="img-fluid">
                 </a>
               </div>
@@ -144,7 +144,7 @@
                 <a href="" target="_blank" placement="top"
                   ngbTooltip="CENTRE TECHNIQUE DES DATTES">
                   <img
-                  src="../../assets/img/ill/ctd.png "
+                  src="./assets/img/ill/ctd.png "
                     class="img-fluid opacity-3">
                 </a>
               </div>
